--- a/compose.yaml
+++ b/compose.yaml
@@ -18,25 +18,25 @@ services:
     environment:
       - JAVA_OPTS=-Djenkins.install.runSetupWizard=false 
 
-  # # SonarQube service configuration
-  # sonarqube:
-  #   image: sonarqube:lts
-  #   ports:
-  #     - "9000:9000"  
-  #   environment:
-  #     - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true  
-  #     - SONARQUBE_JDBC_URL=jdbc:mysql://db:3306/sonarqube
-  #     - SONARQUBE_JDBC_USERNAME=sonarqube  
-  #     - SONARQUBE_JDBC_PASSWORD=sonarqube  
+  # SonarQube service configuration
+  sonarqube:
+    image: sonarqube:lts
+    ports:
+      - "9000:9000"  
+    environment:
+      - SONAR_ES_BOOTSTRAP_CHECKS_DISABLE=true  
+      - SONARQUBE_JDBC_URL=jdbc:mysql://db:3306/sonarqube
+      - SONARQUBE_JDBC_USERNAME=sonarqube  
+      - SONARQUBE_JDBC_PASSWORD=sonarqube  
 
-  # # MySQL database service configuration
-  # db:
-  #   image: mysql:latest   
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: P@ssw0rdqwe!@
-  #     MYSQL_DATABASE: sonarqube  
-  #     MYSQL_USER: sonarqube  
-  #     MYSQL_PASSWORD: sonarqube  
+  # MySQL database service configuration
+  db:
+    image: mysql:latest   
+    environment:
+      MYSQL_ROOT_PASSWORD: P@ssw0rdqwe!@
+      MYSQL_DATABASE: sonarqube  
+      MYSQL_USER: sonarqube  
+      MYSQL_PASSWORD: sonarqube  
 
 volumes:
   jenkins_home:  
